# ProyectDistri

.github/workflows/: deployQA-Dominio1.yml  deployQA-Dominio2.yml  deployQA-Dominio3.yml  deployQA-Dominio4.yml  deployQA-Dominio8.yml
backend/Authentication_and_Users/: docker-compose-auth-users.yml
backend/Entry_Exit/: docker-compose-entry_exit.yml
backend/Entry_Exit/control-service/: .env  Dockerfile  go.mod  main.go
backend/Entry_Exit/control-service/redisutil/: redis.go
backend/Entry_Exit/entry-service/: .env  Dockerfile  go.mod  go.sum  main.go
backend/Entry_Exit/entry-service/redisutil/: redis.go
backend/Entry_Exit/exit-service/: .env  Dockerfile  go.mod  go.sum  main.go  redis.go
backend/Entry_Exit/license-service/: .env  Dockerfile  go.mod  main.go  redis.go
backend/Notifications/: docker-compose-notification.yml
backend/Notifications/notification-service-ws/: .env  Cargo.toml  Dockerfile
backend/Notifications/notification-service-ws/src/: handlers.rs  kafka.rs  main.rs  ws.rs
backend/Parking_Management/: docker-compose-parking-management.yml
backend/Parking_Management/parking_management_tests/availability-service/: health_test.go
backend/Parking_Management/parking_management_tests/levels-floors-service/: health_test.go
backend/Vehicles/: docker-compose-vehicles.yml
backend/Vehicles/license-plate-validation-service/: Dockerfile
backend/Vehicles/vehicle-history-service/: Dockerfile
backend/Vehicles/vehicle-registration-service/: .env  Dockerfile
backend/api-gateway-nginx/: Dockerfile  docker-compose-api_gateway.yml  nginx.conf
(+28 files in other folders)
