[package]
name = "notification-service-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
env_logger = "0.10"
rdkafka = { version = "0.29", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


